# pydantic-ai-production-ready

./: .env.example  .gitignore  ARCHITECTURE.md  COMMANDS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  justfile  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.github/: copilot-instructions.md
.github/instructions/: course-structure.instructions.md  markdown.instructions.md
.github/prompts/: transcript-breakdown.prompt.md
.github/skills/command-runner/: SKILL.md
.github/skills/learning-ops/: SKILL.md
.github/skills/learning-ops/assets/: template_readme.md
.github/skills/learning-ops/references/: cross-referencing.md  maintenance.md  structure.md  syncing.md
.github/skills/learning-ops/scripts/: test_init_learning_structure.py
.github/skills/learning-structure/: SKILL.md
.github/skills/learning-structure/scripts/: init_learning_structure.py
.github/skills/monorepo-maintainer/: SKILL.md
.github/skills/monorepo-maintainer/references/: new-package-workflow.md  package-architecture.md
.github/skills/project-navigator/: SKILL.md
.github/skills/skill-creator/: SKILL.md
learning/: CONCEPTS.md  MATERIALS.md  README.md
learning/00-misc/: NOT_IMPLEMENTED.md  README.md
learning/00-misc/reports/: internal_apps_brainstorming.md
learning/00-not-implemented/: README.md
learning/01-fundamentals/: 01-introduction.md  02-setup.md  03-first-agent.md  README.md  spec.md
learning/01-fundamentals/exercises/: README.md
learning/02-core-concepts/: README.md
learning/03-advanced-patterns/: README.md
learning/04-production-deployment/: README.md
projects/: .env.example  README.md  pyproject.toml
projects/src/: __init__.py
projects/src/examples/: chatbot.py  data_extraction.py
projects/tests/: test_basic.py
scripts/: install_skill.sh
(+2 files in other folders)
